# windypops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  secrets_template.ini
.github/: copilot-instructions.md
src/windy_pops/: constants.py  data_loader.py  evaluator.py  time_utils.py  vector2d.py  windy_pops.py
tests/: test_data_loader.py  test_end2end.py  test_weather_evaluation.py
tests/data_for_tests/: 2025-05-27-11-29-58_response.json  2025-sample-data.json
